hotdog: overlay: Define slow brightness ramp animation rate
Signed-off-by: Anirudh Gupta <anirudhgupta109@aosip.dev>
Change-Id: I00a4303a1a6e237ea0241e539ce635c0d4b9790f
Signed-off-by: Pranav <npv12@iitbbs.ac.in>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -243,4 +243,7 @@
          non-zero. -->
     <integer name="config_defaultPeakRefreshRate">90</integer>
 
+    <!-- Slow brightness animation ramp rate in brightness units per second-->
+    <integer translatable="false" name="config_brightness_ramp_rate_slow">60</integer>
+
 </resources>
