--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -261,4 +261,12 @@
      <!-- How long it takes for the HW to start illuminating after the illuminati -->
      <integer name="config_udfps_illumination_transition_ms">0</integer>
 
+     <!-- Radius of the software rounded corners at the bottom of the display
+        in its natural orientation. If zero, the value of rounded_corner_radius is used. -->
+     <dimen name="rounded_corner_radius_bottom">12dp</dimen>
+
+     <!-- Radius of the software rounded corners at the top of the display
+        in its natural orientation. If zero, the value of rounded_corner_radius is used. -->
+     <dimen name="rounded_corner_radius_top">12dp</dimen>
+
 </resources>
